--- a/css/common.css
+++ b/css/common.css
@@ -274,6 +274,8 @@ h1, h2{
 .list-group-numbered>li::before {
   content: counters(section, ".") ". ";
   counter-increment: section;
+  position: absolute;
+  left: 6%;
 }
 
 
