--- a/css/common.css
+++ b/css/common.css
@@ -15,10 +15,11 @@
   --logoColor_2_hard: #2ed14c;
   --logoColor_3: #FAD06A;
   --alertColor: #ff4646;
+  --logoColor_4: #f3eee8;
 }
 
 body{
-  background-color:#f3eee8;  
+  background-color: var( --logoColor_4);  
   /* background: var( --logoColor);   */
   /* background: -webkit-linear-gradient(to bottom, #fff0dc, var( --logoColor));  
   background: linear-gradient(to bottom, #fff0dc, var( --logoColor));  */
@@ -94,6 +95,11 @@ h1, h2{
   filter: grayscale(100%);
 }
 
+.backdrop-blur{
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
 /* btn */
 .btn-logoColor{
   color: #FFFFFF;
@@ -143,7 +149,7 @@ h1, h2{
   border: solid 1px;
   border-color: var( --logoColor_2);
 }
-.bg-#FFFFFF-95{
+.bg-white-95{
   background-color: rgba(255, 255, 255, 0.98);
 }
 .bg-logoColor{
