--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,8 @@
 /* FOOTER */
 footer {
-  /* background-color: #DFCCBD; */
-  /* background-color: #ff8425cc; */
-  background-color: transparent;
+  background: -webkit-linear-gradient(to bottom, var( --logoColor_4), var( --logoColor));  
+  background: linear-gradient(to bottom, var( --logoColor_4), var( --logoColor)); 
+  /* background-color: transparent; */
   padding: 30px;
   /* height: 200px; */
 }
