--- a/css/header.css
+++ b/css/header.css
@@ -1,28 +1,28 @@
 header {
-    /* background-color: #DFCCBD; */
-    background-color: #ff8425;
-    /* background-color: transparent; */
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-  }
+  background: var( --logoColor_4);  
+  background: -webkit-linear-gradient(to bottom, var( --logoColor_4), rgba(243, 238, 232, 0.8));  
+  background: linear-gradient(to bottom, var( --logoColor_4), rgba(243, 238, 232, 0.8)); 
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  box-shadow: 0 1px 2px rgb(0, 0, 0, 0.1)
+}
 .logo {
-    /* background-image: url(../images/logo.svg); */
-    background-image: url(../images/svg/logoLogo.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 40px; 
-    height: 40px;
+  background-image: url(../images/svg/logoLogo.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 40px; 
+  height: 40px;
 }
 
 @media(max-width: 1999px){
-    .logo{
-        display: flex;
-    }
+  .logo{
+      display: flex;
+  }
 }
 @media(min-width: 1200px){
-    .logo{
-        display: inline-block;
-    }
+  .logo{
+      display: inline-block;
+  }
 }
 
 @keyframes spin{
@@ -35,30 +35,30 @@ header {
 }
 
 .logo a {
-color: white;
-font-size: 10px;
-padding: 15px;
+  color: white;
+  font-size: 10px;
+  padding: 15px;
 }
 
 .userList{
-    left: -110px !important;
-    text-align: center !important;
-    background: rgba(255, 255, 255, 0.8);
+  left: -110px !important;
+  text-align: center !important;
+  background: rgba(255, 255, 255, 0.8);
 }
 .bagList{
-    left: -238px !important;
-    text-align: right !important;
-    background: rgba(255, 255, 255, 0.8);
-    width: 390px;
+  left: -238px !important;
+  text-align: right !important;
+  background: rgba(255, 255, 255, 0.8);
+  width: 390px;
 }
 
 .userList a{
-    color:slategray;
-    padding: 1.35rem .5rem !important;
+  color:slategray;
+  padding: 1.35rem .5rem !important;
 }
 
 .dropdown-item:hover{
-    background-color: white;
+  background-color: white;
 }
 
 .sideMenuBtn, .sideMenuBtn-L{
@@ -142,98 +142,97 @@ padding: 15px;
 }
 
 .menuBurger, .menuBurger-L {
-    width: 20px;
-    height: 2px;
-    background-color: var( --logoColor);
-    border-radius: 5px;
-    transition: all .3s ease-in-out;
-  }
+  width: 20px;
+  height: 2px;
+  background-color: var( --logoColor);
+  border-radius: 5px;
+  transition: all .3s ease-in-out;
+}
   
-  .menuBurger::before{
-    content: '';
-    position: absolute;
-    width: 15px;
-    height: 2px;
-    background-color: var( --logoColor);
-    border-radius: 5px;
-    transition: all .3s ease-in-out;
-  }
-  .menuBurger-L::before{
-    content: '';
-    position: absolute;
-    width: 15px;
-    height: 2px;
-    background-color: var( --logoColor);
-    border-radius: 5px;
-    transform: translate(5px , -7px);
-    transition: all .3s ease-in-out;
-  }
+.menuBurger::before{
+  content: '';
+  position: absolute;
+  width: 15px;
+  height: 2px;
+  background-color: var( --logoColor);
+  border-radius: 5px;
+  transition: all .3s ease-in-out;
+}
+.menuBurger-L::before{
+  content: '';
+  position: absolute;
+  width: 15px;
+  height: 2px;
+  background-color: var( --logoColor);
+  border-radius: 5px;
+  transform: translate(5px , -7px);
+  transition: all .3s ease-in-out;
+}
 
-  .menuBurger::after {
-    content: '';
-    position: absolute;
-    width: 10px;
-    height: 2px;
-    background-color: var( --logoColor);
-    border-radius: 5px;
-    transition: all .3s ease-in-out;
-  }
-  .menuBurger-L::after {
-    content: '';
-    position: absolute;
-    width: 10px;
-    height: 2px;
-    background-color: var( --logoColor);
-    border-radius: 5px;
-    transform: translate(10px , 7px);
-    transition: all .3s ease-in-out;
-  }
+.menuBurger::after {
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 2px;
+  background-color: var( --logoColor);
+  border-radius: 5px;
+  transition: all .3s ease-in-out;
+}
+.menuBurger-L::after {
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 2px;
+  background-color: var( --logoColor);
+  border-radius: 5px;
+  transform: translate(10px , 7px);
+  transition: all .3s ease-in-out;
+}
   
-  .menuBurger::before {
-    transform: translateY(-7px);
-  }
-  
-  .menuBurger::after {
-    transform: translateY(7px);
-  }
+.menuBurger::before {
+  transform: translateY(-7px);
+}
 
-  /* burger animate */
-  .MenuBtnOpen {
-    background-color: transparent;
-    transform: translateX(-50px);
-  }
-  
-  .MenuBtnOpen::before {
-    width: 20px;
-    transform: rotate(45deg) translate(35px, -35px);
-  }
-  
-  .MenuBtnOpen::after {
-    width: 20px;
-    transform: rotate(-45deg) translate(35px, 35px);
-  }
+.menuBurger::after {
+  transform: translateY(7px);
+}
 
-  .font8rem{
-    font-size: 0.9rem !important;
-  }
-
-  #collapseMenu-sm{
-    max-height: 75vh;
-    overflow-y: auto;
-    top: 65px; 
-    margin:0px -15px; 
-    background: rgba(255, 255, 255, 0.95);
-  }
-
-  .menulist:hover path {
-    fill: var( --logoColor);
-  }
-  .menulist:hover #quesDot{
-    fill: white;
-  }
-  .head_icon:hover .headIcon path{
-    fill: var( --logoColor);
-    fill-opacity: 1;
-    transition: all .2s ease-in;
-  }
+/* burger animate */
+.MenuBtnOpen {
+  background-color: transparent;
+  transform: translateX(-50px);
+}
   
+.MenuBtnOpen::before {
+  width: 20px;
+  transform: rotate(45deg) translate(35px, -35px);
+}
+
+.MenuBtnOpen::after {
+  width: 20px;
+  transform: rotate(-45deg) translate(35px, 35px);
+}
+
+.font8rem{
+  font-size: 0.9rem !important;
+}
+
+#collapseMenu-sm{
+  max-height: 75vh;
+  overflow-y: auto;
+  top: 65px; 
+  margin:0px -15px; 
+  background: rgba(255, 255, 255, 0.95);
+}
+
+.menulist:hover path {
+  fill: var( --logoColor);
+}
+.menulist:hover #quesDot{
+  fill: white;
+}
+.head_icon:hover .headIcon path{
+  fill: var( --logoColor_hard);
+  fill-opacity: 1;
+  transition: all .2s ease-in;
+}
