0420-1650 list-group radius

--- a/css/account.css
+++ b/css/account.css
@@ -132,14 +132,7 @@
     color: #fff;
     background-color: var( --logoColor);
     border: 0;
-}
-.list-group-item:first-child{
-    border-top-left-radius: unset;
-    border-top-right-radius: unset;
-}
-.list-group-item:last-child {
-    border-bottom-right-radius: unset;
-    border-bottom-left-radius: unset;
+    transition: all .2s ease-in;
 }
 
 /* USERINFO */
