--- a/css/common.css
+++ b/css/common.css
@@ -43,7 +43,7 @@ a {
 }
 a:hover {
   text-decoration: none !important;
-  color: var( --logoColor);
+  color: var( --logoColor_hard);
 }
 
 ul, ol, li {
