0423-1415 加不同尺寸的logo

--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,8 @@
         /* margin: 1px; */
     }
     .logoDpSm img{
-        width: 100px;
+        width:  auto;
+        max-height: 95px;
     }
 }
 @media(min-width: 500px){
@@ -71,7 +72,7 @@
         line-height: 80px;
     }
     .logoDpSm img{
-        width: 137px;
+        max-height: 120px;
     }
 }
 @media(min-width: 768px){
