嘗試upload頁面中已上傳部分的版型、fix bug

--- a/css/designer.css
+++ b/css/designer.css
@@ -6,32 +6,31 @@
 	float: right;
 }
 .page-title {
+	position: relative !important;
 	background-color: #fff;
 	padding: 18px;
 	margin-bottom: 4px;
 	text-align: center;
 	font-size: 14px;
+	pointer-events: none;
 }
 @media (min-width: 576px) {
 	.page-title {
 		background-color: transparent;
-		position: fixed;
-		width: 100%;
-		top: 0;
-		left: 0;
-		z-index: 9999;
+		position: fixed !important;
 		font-size: 20px;
 	}
 }
 .logo-img {
 	width: 150px;
-	/* height: 150px; */
 }
 .upload-img {
 	width: 200px;
-	/* height: 200px; */
 }
-.overlay {
+.overlay,
+.uploadDbItems:hover::after {
+	content: '';
+	display: block;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -73,6 +72,18 @@
 	}
 }
 
+/* ---已上傳部分---------------------- */
+.delDbBtn {
+	display: none;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 1;
+}
+.uploadDbItems:hover .delDbBtn {
+	display: inline-block;
+}
 /* ---上傳拖曳區塊---------------------- */
 .upload-wrapper {
 	position: relative;
@@ -101,12 +112,6 @@
 #upload:focus {
 	outline: none;
 }
-
-/* dropzonejs */
-.preview-container {
-	background: url('../images/upload cloud.png') no-repeat center top;
-}
-
 
 /* ---覆蓋common---------------------- */
 @media (min-width: 992px) {
