--- a/css/designer.css
+++ b/css/designer.css
@@ -3,7 +3,8 @@
 	width: 20px;
 	height: 20px;
 	border-radius: 2px;
-	float: right;
+	float: left;
+	margin-right: 8px;
 }
 .page-title {
 	position: relative !important;
